zarf-101/Kubernetes_Objects/Ingress/objects/ing-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /coffee
      - /tea
