zarf-101/Kubernetes_Objects/Ingress/objects/ing-strip-prefixes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: example
spec:
  stripPrefix:
    prefixes:
      - /coffee
      - /tea
