zarf-101/Kubernetes_Objects/Ingress/objects/ing-coffee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-coffee-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      drink: coffee
  template:
    metadata:
      labels:
        app: nginx
        drink: coffee
    spec:
      containers:
      - name: nginx
        image: nginx:1.22.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
          # subPath: index.html
      volumes:
      - name: index
        configMap:
          name: nginx-coffee
          # items:
          #   - key: index.html
          #     path: index.html
