zarf-101/Kubernetes_Objects/Ingress/objects/ing-tea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    drink: tea
  name: svc-nginx-tea-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
    drink: tea
