zarf-101/Kubernetes_Objects/Ingress/objects/ing-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drinks
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-coffee-deployment
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: svc-nginx-tea-deployment
            port:
              number: 80
